# PFM-Trazabilidad-Rust-Solana-202605

./: .gitignore  Anchor.toml  README.md  como iniciar proyecto RUST.txt  deploy.sh  package-lock.json  package.json
app/: .env.local  package.json
app/public/: idl.json
app/src/components/: LocationSearch.tsx  WalletProvider.tsx  styles.tsx
app/src/components/actors/: ActorsTab.tsx
app/src/components/shipments/: ShipmentsTab.tsx
app/src/lib/: actors.ts  idl.json  logistics.ts  municipios.ts  program.ts
app/src/pages/: _app.tsx  index.tsx  pdf.tsx
app/src/styles/: globals.css
app/tests/: demo.ts
programs/logistics_traceability/: Cargo.toml
programs/logistics_traceability/src/: error.rs  events.rs  lib.rs  state.rs
programs/logistics_traceability/src/instructions/: cancel_shipment.rs  confirm_delivery.rs  create_shipment.rs  delete_actor.rs  initialize.rs  mod.rs  record_checkpoint.rs  register_actor.rs  report_incident.rs  resolve_incident.rs  transfer_authority.rs  update_actor_status.rs  update_status.rs
scripts/: demo-data.ts  init.ts
tests/: logistics-traceability.ts
