[package]
name = "logistics_traceability"
version = "0.1.0"
description = "TFM - Plataforma de Trazabilidad Logistica en Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "logistics_traceability"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"

[dev-dependencies]
anchor-lang = { version = "0.31.0", features = ["derive"] }
